# services/auth/internal/server/handlers/auth/handler.go
@@ -110,7 +110,7 @@ func (h *Handler) SignIn(ctx *gin.Context) {
 		return
 	}
 
-	logger.GinSetLoggerAttr(ctx, slog.Int("userID", user.Id))
+	logger.GinSetLoggerAttr(ctx, slog.String("userID", user.Id))
 
 	accessToken, err := h.services.Auth.CreateAccessAuthToken(ctx.Request.Context(), user.Id)
 	if err != nil {
@@ -127,5 +127,101 @@ func (h *Handler) SignIn(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, SignInResp200Body{
 		AccessToken:  accessToken,
 		RefreshToken: refreshToken,
+	})
+}
+
+type RefreshReqBody struct {
+	RefreshToken string `json:"refreshToken" validate:"required"`
+}
+
+type RefreshResp200Body struct {
+	AccessToken  *string `json:"access_token"`
+	RefreshToken *string `json:"refresh_token"`
+}
+
+// @Summary Refresh
+// @Description Refresh
+// @Tags Auth
+// @Param body body RefreshReqBody true "Refresh request body"
+// @Success 200 {object} RefreshResp200Body "Refresh success"
+// @Failure 401 {string} string "invalid credentials"
+// @Failure 500 {string} string "internal server error"
+// @Router /api/auth/refresh [post]
+func (h *Handler) Refresh(ctx *gin.Context) {
+
+	reqBody := &RefreshReqBody{}
+
+	if err := validator.ParseReqBody(ctx, reqBody); err != nil {
+		response.AbortWithError(ctx, http.StatusBadRequest, err)
+		return
+	}
+
+	userIdFromToken, err := h.services.Auth.VerifyJWTToken(reqBody.RefreshToken)
+	if err != nil {
+		response.AbortWithError(ctx, http.StatusUnauthorized, err)
+		return
+	}
+
+	logger.GinSetLoggerAttr(ctx, slog.String("userID", userIdFromToken))
+
+	if exists, err := h.services.Auth.IfRefreshTokenExistsInRedis(ctx.Request.Context(), reqBody.RefreshToken, userIdFromToken); err != nil {
+		response.AbortWithError(ctx, http.StatusInternalServerError, err)
+		return
+	} else if !exists {
+		response.AbortWithError(ctx, http.StatusUnauthorized, fmt.Errorf("refresh token not found"))
+		return
+	}
+
+	accessToken, err := h.services.Auth.CreateAccessAuthToken(ctx.Request.Context(), userIdFromToken)
+	if err != nil {
+		response.AbortWithError(ctx, http.StatusInternalServerError, err)
+		return
+	}
+
+	refreshToken, err := h.services.Auth.CreateRefreshAuthToken(ctx.Request.Context(), userIdFromToken)
+	if err != nil {
+		response.AbortWithError(ctx, http.StatusInternalServerError, err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, RefreshResp200Body{
+		AccessToken:  accessToken,
+		RefreshToken: refreshToken,
+	})
+
+}
+
+// @Summary Logout
+// @Description Logout
+// @Tags Auth
+// @Success 200 {string} string "Logout success"
+// @Failure 401 {string} string "access token not found"
+// @Failure 500 {string} string "internal server error"
+// @Router /api/auth/logout [delete]
+func (h *Handler) Logout(ctx *gin.Context) {
+
+	accessToken := ctx.GetHeader("Authorization")
+	if accessToken == "" {
+		response.AbortWithError(ctx, http.StatusUnauthorized, fmt.Errorf("access token not found"))
+		return
+	}
+
+	fmt.Println(accessToken)
+
+	userIdFromToken, err := h.services.Auth.VerifyJWTToken(accessToken)
+	if err != nil {
+		response.AbortWithError(ctx, http.StatusUnauthorized, err)
+		return
+	}
+
+	logger.GinSetLoggerAttr(ctx, slog.String("userID", userIdFromToken))
+
+	if err := h.services.Auth.DeleteTokenFromRedis(ctx.Request.Context(), userIdFromToken); err != nil {
+		response.AbortWithError(ctx, http.StatusInternalServerError, err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{
+		"message": "Logout success",
 	})
 }
